feat: finishing collection functionality and design

--- a/static/assets/scss/style.scss
+++ b/static/assets/scss/style.scss
@@ -44,6 +44,10 @@
 @import 'utilities';
 @import 'print';
 
+// page style
+@import 'collection-page';
+@import 'item-collection-page';
+
 // root
 body {
   background-color: $light;
