--- a/static/assets/scss/_transitions.scss
+++ b/static/assets/scss/_transitions.scss
@@ -18,3 +18,36 @@
   overflow: hidden;
   @include transition($transition-collapse);
 }
+
+// nuxt transition
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.25s ease-in-out, transform 0.25s ease-in-out;
+  // transition: all 0.5s; // efek timbul
+}
+
+.page-enter,
+.page-leave-active {
+  opacity: 0;
+  transform: translate3d(0, 15px, 0);
+  // transform: scale(0.5); // efek timbul
+}
+
+// .layout-enter-active,
+// .layout-leave-active {
+//   transition: opacity 0.5s;
+// }
+// .layout-enter,
+// .layout-leave-to {
+//   opacity: 0;
+// }
+
+// .slide-bottom-enter-active,
+// .slide-bottom-leave-active {
+// transition: opacity 0.25s ease-in-out, transform 0.25s ease-in-out;
+// }
+// .slide-bottom-enter,
+// .slide-bottom-leave-to {
+//   opacity: 0;
+//   transform: translate3d(0, 15px, 0);
+// }
