--- a/static/assets/scss/_nav.scss
+++ b/static/assets/scss/_nav.scss
@@ -14,6 +14,7 @@
 .nav-link {
   display: block;
   padding: $nav-link-padding-y $nav-link-padding-x;
+  font-weight: 400;
 
   @include hover-focus() {
     text-decoration: none;
@@ -68,7 +69,6 @@
   }
 }
 
-
 //
 // Pills
 //
@@ -84,7 +84,6 @@
     background-color: $nav-pills-link-active-bg;
   }
 }
-
 
 //
 // Justified variants
@@ -104,7 +103,6 @@
     text-align: center;
   }
 }
-
 
 // Tabbable tabs
 //
